Update homepage text, fixed 2 column layout bug

--- a/less/default.less
+++ b/less/default.less
@@ -50,6 +50,10 @@ section {
             padding: 0 @base-font-size * 3;
             flex-grow: 1;
 
+            &.half-width {
+                width: 50%;
+            }
+
             @media @mobile {
                 width: 100%;
             }
